--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -39,9 +39,10 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation project(path: ':lib-ScratchView')
+//    implementation project(path: ':lib-ScratchView')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.github.MaxPanda0206:ScratchView:1.0.1'
 
 }
